--- a/thesis.tex
+++ b/thesis.tex
@@ -187,7 +187,7 @@
 \bibitem{Volodin2017} 
 Volodin, Evgeny and Mortikov, Evgeny and Kostrykin, Sergey and Galin, V. and Lykossov, Vasily and Gritsun, Andrey and Diansky, Nikolay and Gusev, Anatoly and Iakovlev, Nikolay. Simulation of the present-day climate with the climate model INMCM5. Climate Dynamics, 2017, Vol. 49, DOI: 10.1007/s00382-017-3539-7.
 
-\bibitem{Volodin1998} Володин, Лыкосов,  Параметризация процессов тепло- и влагообменав системе растительность–почва для моделирования общей циркуляции атмосферы. 1. Описание и расчеты с использованием локальныхданных наблюдений, Известия РАН. Физика атмосферы и океана., 1998, No 4., С. 453–465.
+\bibitem{Volodin1998} Володин, Лыкосов,  Параметризация процессов тепло- и влагообменав системе растительность–почва для моделирования общей циркуляции атмосферы. Описание и расчеты с использованием локальныхданных наблюдений, Известия РАН. Физика атмосферы и океана., 1998, No 4., С. 453–465.
 
 \bibitem{Volodina2000} Володина, Бенгтссон, Лыкосов, Параметризация процессов тепло-влагопереноса в снежном покрове для моделирования сезонных вариаций гидрологического цикла суши, Метеорология и гидрология., 2000, Т. 10, No 5. 
 
